.test_output/ztest_pgs_migration/out2.txt

=================================== ERRORS ====================================
_________ ERROR collecting tests/test_regression_collection_extend.py _________
C:\Users\ElChibros\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\_pytest\python.py:508: in importtestmodule
    mod = import_path(
C:\Users\ElChibros\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\_pytest\pathlib.py:596: in import_path
    importlib.import_module(module_name)
C:\Users\ElChibros\AppData\Local\Python\pythoncore-3.14-64\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1406: in _gcd_import
    ???
<frozen importlib._bootstrap>:1371: in _find_and_load
    ???
<frozen importlib._bootstrap>:1342: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:938: in _load_unlocked
    ???
C:\Users\ElChibros\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\_pytest\assertion\rewrite.py:179: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Users\ElChibros\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\_pytest\assertion\rewrite.py:348: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Users\ElChibros\AppData\Local\Python\pythoncore-3.14-64\Lib\ast.py:46: in parse
    return compile(source, filename, mode, flags,
E     File "F:\Antigravity DEV\Zomboid_Architect\tests\test_regression_collection_extend.py", line 165
E       db = create_backend())
E                            ^
E   SyntaxError: unmatched ')'
=========================== short test summary info ===========================
ERROR tests/test_regression_collection_extend.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
1 error in 0.72s
